# infer

./: Cargo.toml  README.md
.github/workflows/: build.yml  miri.yml  release.yml
examples/: file.rs
src/: lib.rs  map.rs
src/matchers/: app.rs  archive.rs  audio.rs  mod.rs
tests/: common.rs  doc.rs
