[package]
name = "infer2"
version = "0.21.1"
authors = ["Bojan <dbojan@gmail.com>"]
edition = "2021"
description = "Small crate to infer file type based on magic number signatures"
license = "MIT"
keywords = ["magic-number", "filetype", "mime", "mime-types", "no_std"]
readme = "README.md"
homepage = "https://github.com/ldclabs/infer2"
repository = "https://github.com/ldclabs/infer2"
documentation = "https://docs.rs/infer2"
exclude = ["/testdata", "/tests"]

[features]
default = ["std"]
std = ["alloc", "cfb"]
alloc = []

[[example]]
name = "file"
path = "examples/file.rs"
required-features = ["std"]

[dependencies]
cfb = { version = "0.14", optional = true }
